<resources>

    <string name="app_name">TMDb Sample</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="image_content_poster">Movie\'s Poster Image</string>
    <string name="image_content_backdrop">Movie\'s Backdrop Image</string>
    <string name="sort">Sort</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="dialog_sort_order_title">Select a sort order</string>
    <string name="loading_failed_button_test">Try Again</string>
    <string name="loading_failed_message">Failed to load movies!</string>
    <string name="poster_image_transition" translatable="false">Poster Image Transition</string>
    <string name="synopsis">Synopsis</string>
    <string name="userRating">User Rating</string>
    <string name="releaseDate">Release Date</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for movies</string>
    <string name="no_movies">No Movies</string>

</resources>
