<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listMovie"
            android:name="com.daksh.tmdbsample.MovieListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="GridLayoutManager"
            tools:context=".movielist.MovieListActivity"
            tools:listitem="@layout/movie_list_item"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</layout>
